--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
-    <!DOCTYPE html>
-        <html lang="es">
-        <head>
-            <meta charset="UTF-8">
-            <title>Barbería Alura</title>
-            <link rel="stylesheet" href="style.css">
-        </head>
-        <body>
-            <h1 style="text-align: center; background: #555555;">Sobre la Barbería Alura</h1>
-            <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p> 
-            <p style = "font-size: 20 px; text-align: center;"><em>Nuestra misión es:<strong> "Proporcionar autoestima y calidad de vida a nuestros clientes".</strong> </em></p>
-            <p style="text-align: center;">Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes. </p>
-        </body>
-            </html>
+        <!DOCTYPE html>
+            <html lang="es">
+            <head>
+                <meta charset="UTF-8">
+                <title>Barbería Alura</title>
+                <link rel="stylesheet" href="style.css">
+            </head>
+                <img id="ban" src="ban.jpg"> </img>
+                <div id="main">
+                <h1>Sobre la Barbería Alura</h1>
+                <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p> 
+                <p id="mision"><em>Nuestra misión es:<strong> "Proporcionar autoestima y calidad de vida a nuestros clientes".</strong> </em></p>
+                <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes. </p>
+                </div>
+                <div id="difer">
+                <img id="diferencial">
+                <h2>Diferenciales</h2>
+                <ul>
+                <li class="item">Atencion personalizada</li>
+                <li class="item">Espacio diferenciado</li>
+                <li class="item">Profesionales</li>
+                </ul>
+                
+                <img src="diferenciales/imagen1" class="img_difer"> </img>
+
+                </div>
+            <!-- ol para ordenados -->
+            </body>
+                </html>
