--- a/productos.html
+++ b/productos.html
@@ -4,17 +4,22 @@
     <head>
     <meta charset="UTF/8">
     <title>Barberia alura </title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="productos.css">
 
     </head>
     <body>
         <header >   
+            <div class="caja">
             <h1><img src="imagenes/logo.png"></h1>
-        <ul> 
-            <li>Home</li>
-            <li>Productos</li>
-            <li>Contacto </li> 
+        <nav >
+            <ul class="nav"> 
+            <li><a href="index.html"> Home</a></li>
+            <li> <a href="productos.html">Productos</a></li>
+            <li><a href="contacto.html">Contacto</a> </li> 
         </ul>
+        </nav>
+    </div>
         </header>
         
     </body>
