--- a/productos.html
+++ b/productos.html
@@ -49,6 +49,10 @@
                 </ul>
 
             </main>
+            <footer >
+                <img src="imagenes/logo-blanco.png">
+                <p class="copyright">&copy copyritght Barberia Alura 2024</p>
+            </footer>
             </body>
 
             </html>
