--- a/contacto.html
+++ b/contacto.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header >   
-    <div class="caja">
-        <h1><img src="imagenes/logo.png"></h1>
+    <fieldset class="caja">
+        <h1><img src="imagenes/logo.png" alt="logo-barberia-alura"></h1>
     <nav >
         <ul class="nav"> 
         <li><a href="index.html"> Home</a></li>
@@ -19,26 +19,26 @@
         <li><a href="contacto.html">Contacto</a> </li> 
     </ul>
     </nav>
-</div>
+    </fieldset>
     </header>
     <main>
         <form>
             <label for="nombre">Nombre y Apellido </label>
-            <input type="text" id="nombre" class="input-padron">
+            <input type="text" id="nombre" class="input-padron" required>
             <label for="correo-electronico">Correo electronico </label>
-            <input type="text" id="correo-electronico"class="input-padron">
+            <input type="email" id="correo-electronico"class="input-padron" required placeholder="tucorreo@gmail.com">
             <label for="telefono">N. telefonico</label>
-            <input type="text" id="telefono"class="input-padron">
+            <input type="tel" id="telefono"class="input-padron" required placeholder="xx xxxxxxxx">
             <label for="mensaje">mensaje</label>
-            <textarea cols="70" rows="10"class="input-padron"> </textarea>
+            <textarea cols="70" rows="10"class="input-padron" required> </textarea>
             
-            <div>
-            <p>Como te gustaria ser contactado</p>
+            <fieldset>
+            <legend>Como te gustaria ser contactado</legend>
             <label for="radio-email"><input type="radio" id="radio-email" value="email" name="contacto">Email</label>
             <label for="radio-telefono"><input type="radio" id="radio-telefono" value="telefono" name="contacto">Telefono</label>
-            <label for="radio-whatsapp"> <input type="radio" id="radio-whatsapp" value="whatsapp" name="contacto">whatsapp</label>
-        
-        </div>
+            <label for="radio-whatsapp"> <input type="radio" id="radio-whatsapp" value="whatsapp" name="contacto" checked>whatsapp</label>
+            </fieldset>
+
         <p> En que horario prefieres ser atendido</p>
         <select>
             <option>Morning</option>
@@ -46,13 +46,13 @@
             <option>Night</option>
         </select>
 
-        <label class="checkbox"><input type="checkbox" > Te gustaria recibir novedades</label>
-        <input type="submit" value="enviar formulario">
+        <label class="checkbox"><input type="checkbox" checked > Te gustaria recibir novedades</label>
+        <input type="submit" class="enviar" value="enviar formulario">
         </form>
     </main>
 </body>
 <footer >
-    <img src="imagenes/logo-blanco.png">
+    <img src="imagenes/logo-blanco.png" alt="logo-barberia-alura">
     <p class="copyright">&copy copyritght Barberia Alura 2024</p>
 </footer>
 </body>
