--- a/productos.html
+++ b/productos.html
@@ -5,7 +5,7 @@
             <meta charset="UTF/8">
             <title>Barberia alura </title>
             <link rel="stylesheet" href="reset.css">
-            <link rel="stylesheet" href="productos.css">
+            <link rel="stylesheet" href="style.css">
 
             </head>
             <body>
